--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,26 @@
 .Dictionary {
   margin: 50px;
 }
+.Dictionary h1 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+.Dictionary section {
+  background: violet;
+  padding: 30px;
+  margin: 10px 0;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.Dictionary input {
+  width: 100%;
+  padding: 6px 10px;
+  border-radius: 8px;
+
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.Dictionary .hint {
+  font-size: 13px;
+  margin-top: 3px;
+}
