--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -7,7 +7,7 @@
   margin-bottom: 40px;
 }
 .Dictionary section {
-  background: violet;
+  background-color: rgba(255, 255, 255, 0.6);
   padding: 30px;
   margin: 10px 0;
   border-radius: 8px;
