--- a/src/Photos.css
+++ b/src/Photos.css
@@ -1,4 +1,8 @@
 .Photos img {
   border-radius: 4px;
   margin-bottom: 20px;
+  transition: 200ms ease-in-out;
+}
+.Photos img:hover {
+  transform: scale(1.5);
 }
