--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
 }
 body {
-  background-image: url("/public/milkyway.jpg");
+  background-image: url("/public/background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
